--- a/investors.html
+++ b/investors.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Catalog</title>
+    <title>Investors</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -13,11 +13,11 @@
       </a>
       <nav>
         <ul>
-          <li><a href="/pages/news.html class="active">News</a></li>
-          <li><a href="/pages/about-us.html" class="active">About Us</a></li>
-          <li><a href="/pages/catalog.html" class="active">Catalog</a></li>
-          <li><a href="/pages/investors.html" class="active">Investors</a></li>
-          <li><a href="/pages/vacancies.html" class="active">Vacancies</a></li>
+          <li><a href="news.html" class="active">News</a></li>
+          <li><a href="about-us.html" class="active">About Us</a></li>
+          <li><a href="catalog.html" class="active">Catalog</a></li>
+          <li><a href="investors.html" class="active">Investors</a></li>
+          <li><a href="vacancies.html" class="active">Vacancies</a></li>
         </ul>
       </nav>
     </header>
@@ -26,6 +26,5 @@
         <img src="/img/arasaka-logo-1.png" alt="Arasaka Logo" />
       </div>
     </div>
-
   </body>
 </html>
