--- a/about-us.html
+++ b/about-us.html
@@ -14,11 +14,11 @@
 
       <nav>
         <ul>
-          <li><a href="/pages/news.html class="active">News</a></li>
-          <li><a href="/pages/about-us.html" class="active">About Us</a></li>
-          <li><a href="/pages/catalog.html" class="active">Catalog</a></li>
-          <li><a href="/pages/investors.html" class="active">Investors</a></li>
-          <li><a href="/pages/vacancies.html" class="active">Vacancies</a></li>
+          <li><a href="news.html" class="active">News</a></li>
+          <li><a href="about-us.html" class="active">About Us</a></li>
+          <li><a href="catalog.html" class="active">Catalog</a></li>
+          <li><a href="investors.html" class="active">Investors</a></li>
+          <li><a href="vacancies.html" class="active">Vacancies</a></li>
         </ul>
       </nav>
     </header>
@@ -27,6 +27,5 @@
         <img src="/img/arasaka-logo-1.png" alt="Arasaka Logo" />
       </div>
     </div>
-  
   </body>
 </html>
